{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 359,
  "lineage": "4e2e401d-f510-33d8-9b74-550f89cea6c6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "week4-default-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:532442580831:route-table/rtb-0c21d720c2697ead6",
            "default_route_table_id": "rtb-0c21d720c2697ead6",
            "id": "rtb-0c21d720c2697ead6",
            "owner_id": "532442580831",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-03f4521119f81bb46",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0324ed8fa9b479548",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "week4-default-route-table"
            },
            "tags_all": {
              "Name": "week4-default-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0699743b0d6800a4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.ec2-nat",
            "aws_security_group.public-security-group",
            "aws_subnet.week4-subnet-public",
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-003acd4f8da7e06f9",
            "arn": "arn:aws:ec2:us-east-1:532442580831:instance/i-03f4521119f81bb46",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03f4521119f81bb46",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "okostryba_lohika_ssh",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0324ed8fa9b479548",
            "private_dns": "ip-10-0-1-228.ec2.internal",
            "private_ip": "10.0.1.228",
            "public_ip": "44.200.133.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0f05d7869cb897e05",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0eade69a91e5540ef",
            "tags": {
              "Name": "ec2-nat"
            },
            "tags_all": {
              "Name": "ec2-nat"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0063948bc16cf1e28"
            ]
          },
          "dependencies": [
            "aws_security_group.public-security-group",
            "aws_subnet.week4-subnet-public",
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ededff12e34e59e",
            "arn": "arn:aws:ec2:us-east-1:532442580831:instance/i-0b5ee4c15dd9fd5ce",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b5ee4c15dd9fd5ce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "okostryba_lohika_ssh",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08752a915eefa7e88",
            "private_dns": "ip-10-0-2-237.ec2.internal",
            "private_ip": "10.0.2.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d7e10c3885bc167d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0309512ddcac29901",
            "tags": {
              "Name": "ec2-private"
            },
            "tags_all": {
              "Name": "ec2-private"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0387a49269a0871e2"
            ]
          },
          "dependencies": [
            "aws_security_group.private-security-group",
            "aws_subnet.week4-subnet-private",
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ededff12e34e59e",
            "arn": "arn:aws:ec2:us-east-1:532442580831:instance/i-0ede3543244d4a4fc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ede3543244d4a4fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "okostryba_lohika_ssh",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ba6b7d29cdb7ed35",
            "private_dns": "ip-10-0-1-90.ec2.internal",
            "private_ip": "10.0.1.90",
            "public_ip": "44.203.205.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01649a604dfc77715",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eade69a91e5540ef",
            "tags": {
              "Name": "ec2-public"
            },
            "tags_all": {
              "Name": "ec2-public"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0063948bc16cf1e28"
            ]
          },
          "dependencies": [
            "aws_security_group.public-security-group",
            "aws_subnet.week4-subnet-public",
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "week4-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:532442580831:internet-gateway/igw-088d49fd8cdf1c883",
            "id": "igw-088d49fd8cdf1c883",
            "owner_id": "532442580831",
            "tags": {
              "Name": "week4-gw"
            },
            "tags_all": {
              "Name": "week4-gw"
            },
            "vpc_id": "vpc-0699743b0d6800a4e"
          },
          "dependencies": [
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "week4-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:532442580831:loadbalancer/app/week4-lb/2abf6fd5e2c9115e",
            "arn_suffix": "app/week4-lb/2abf6fd5e2c9115e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "week4-lb-1806229954.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:532442580831:loadbalancer/app/week4-lb/2abf6fd5e2c9115e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "week4-lb",
            "security_groups": [
              "sg-0063948bc16cf1e28"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0309512ddcac29901"
              },
              {
                "subnet_id": "subnet-0eade69a91e5540ef"
              }
            ],
            "subnets": [
              "subnet-0309512ddcac29901",
              "subnet-0eade69a91e5540ef"
            ],
            "tags": {
              "Name": "week4-lb"
            },
            "tags_all": {
              "Name": "week4-lb"
            },
            "vpc_id": "vpc-0699743b0d6800a4e",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.public-security-group",
            "aws_subnet.week4-subnet-private",
            "aws_subnet.week4-subnet-public",
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "week4-lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:532442580831:listener/app/week4-lb/2abf6fd5e2c9115e/3ff206829a78f0db",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:532442580831:targetgroup/week4-target-group/f570030a7ccd4321",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:532442580831:listener/app/week4-lb/2abf6fd5e2c9115e/3ff206829a78f0db",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:532442580831:loadbalancer/app/week4-lb/2abf6fd5e2c9115e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.week4-lb",
            "aws_lb_target_group.week4-target-group",
            "aws_security_group.public-security-group",
            "aws_subnet.week4-subnet-private",
            "aws_subnet.week4-subnet-public",
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "week4-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:532442580831:targetgroup/week4-target-group/f570030a7ccd4321",
            "arn_suffix": "targetgroup/week4-target-group/f570030a7ccd4321",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:532442580831:targetgroup/week4-target-group/f570030a7ccd4321",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "week4-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0699743b0d6800a4e"
          },
          "dependencies": [
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "week4-target-group-attachment-ec2-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:532442580831:targetgroup/week4-target-group/f570030a7ccd4321-20220511074511955000000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:532442580831:targetgroup/week4-target-group/f570030a7ccd4321",
            "target_id": "i-0b5ee4c15dd9fd5ce"
          },
          "dependencies": [
            "aws_instance.ec2-private",
            "aws_lb_target_group.week4-target-group",
            "aws_security_group.private-security-group",
            "aws_subnet.week4-subnet-private",
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "week4-target-group-attachment-ec2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:532442580831:targetgroup/week4-target-group/f570030a7ccd4321-20220511074511874500000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:532442580831:targetgroup/week4-target-group/f570030a7ccd4321",
            "target_id": "i-0ede3543244d4a4fc"
          },
          "dependencies": [
            "aws_instance.ec2-public",
            "aws_lb_target_group.week4-target-group",
            "aws_security_group.public-security-group",
            "aws_subnet.week4-subnet-public",
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "week4-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:532442580831:route-table/rtb-09c61b6699e7b1003",
            "id": "rtb-09c61b6699e7b1003",
            "owner_id": "532442580831",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-088d49fd8cdf1c883",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "week4-public-route-table"
            },
            "tags_all": {
              "Name": "week4-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0699743b0d6800a4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.week4-gw",
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045a060d48a29f726",
            "route_table_id": "rtb-09c61b6699e7b1003",
            "subnet_id": "subnet-0eade69a91e5540ef"
          },
          "dependencies": [
            "aws_internet_gateway.week4-gw",
            "aws_route_table.week4-public-route-table",
            "aws_subnet.week4-subnet-public",
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:532442580831:security-group/sg-0387a49269a0871e2",
            "description": "Allow http and ssh and ping at client host from vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0387a49269a0871e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private-security-group",
            "name_prefix": "",
            "owner_id": "532442580831",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-security-group"
            },
            "tags_all": {
              "Name": "private-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0699743b0d6800a4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:532442580831:security-group/sg-0063948bc16cf1e28",
            "description": "Allow http and ssh to client host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0063948bc16cf1e28",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-security-group",
            "name_prefix": "",
            "owner_id": "532442580831",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-security-group"
            },
            "tags_all": {
              "Name": "public-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0699743b0d6800a4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "week4-subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:532442580831:subnet/subnet-0309512ddcac29901",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0309512ddcac29901",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "532442580831",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "week4-subnet-private"
            },
            "tags_all": {
              "Name": "week4-subnet-private"
            },
            "vpc_id": "vpc-0699743b0d6800a4e"
          },
          "dependencies": [
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "week4-subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:532442580831:subnet/subnet-0eade69a91e5540ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eade69a91e5540ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "532442580831",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "week4-subnet-public"
            },
            "tags_all": {
              "Name": "week4-subnet-public"
            },
            "vpc_id": "vpc-0699743b0d6800a4e"
          },
          "dependencies": [
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "week4-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:532442580831:vpc/vpc-0699743b0d6800a4e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-071910274b0361c63",
            "default_route_table_id": "rtb-0c21d720c2697ead6",
            "default_security_group_id": "sg-020ff106ba4e017c2",
            "dhcp_options_id": "dopt-0dcb33b788cbade57",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0699743b0d6800a4e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c21d720c2697ead6",
            "owner_id": "532442580831",
            "tags": {
              "Name": "week4-vpc"
            },
            "tags_all": {
              "Name": "week4-vpc"
            }
          }
        }
      ]
    }
  ]
}